correct z-index list

--- a/style/elements/select.css
+++ b/style/elements/select.css
@@ -7,7 +7,6 @@
 /* ============ SELECT ============ */
 
 .dropdown {
-   z-index: 5;
    box-sizing: border-box;
    position: relative;
 }
@@ -76,7 +75,7 @@
 .dropdown-list {
    display: none;
 
-   z-index: 1;
+   z-index: 6;
    overflow: hidden;
    position: absolute;
 
